
Prevent the database from being modified when current db operation has not finished
This should prevent corrupting the database file on very slow machines and/or very large database files.

Add excluding entries by tag
Entries can now be filtered-out via tags. Simply right click on the tag's name in Tag Manager or use the
new -Tag button in the filtering drop-down to create exclusive tags.

Version 1.15.0
---------------------------------
Fix saving / loading database via browser menu not working at all.

Add keyboard shortcut for `Save Database As...`

Minor UI improvements

Add Tag Manager
This displays all the tags in the database. It can be used to quickly filter between
tags.

Add a counter for total entries in database under Entry menu.

Cap frame rate at 60

Add support for URLs
This includes linking an arbitrary number of URLs to each entry. There is also a barebones URL manager
for creating / removing global URLs that can then be applied to each entry. The URLs can be opened in
the browser by clicking on them, or removed via right-clicking. This requires some further refinement,
for example on how to determine which browser to open the links with.

Fix a bug with Tag Filter's input field

Version 1.14.0
---------------------------------
Add new completion status: On-Hold

Minor performance improvements.

Fix a bug where new tag text input was not always cleared.

Fix a bug where Edit Notes was using a wrong ImGui flag.

Fix a bug preventing saving and loading the database via browser from working.

Version: 1.13.0 (2023-11-01)
---------------------------------
Add tags
You can now assign an arbitrary number of tags to each entry in the database.
The entries can be filtered by tags

Version: 1.12.0 (2023-10-28)
---------------------------------
Add filtering
Entries can now be filtered based on most of their attributes.
The previous Entry name fuzzy filtering has been renamed to `search` as it better describes the function.

Add MS Windows support
